web.tf
provider "aws" {
  region = "${var.region}"
}


terraform {
  backend "s3" {
    region = "us-east-1"
    bucket = "dicecentre-remote-state-web"
    key = "terraform.tfstate"
  }
}

data "terraform_remote_state" "consul" {
  backend = "s3"
  config {
    region = "${ var.region}"
    bucket = "dicecentre2-remote_state-consul2"
    key = "terraform.tfstate" }
}

provider "consul" {
  address = "${data.terraform_remote_state.consul.consul_server_address.0}:8500"
  datacenter = "consul"
}


module "remote_state" {
  source = "github.com/richardx14/tf_remote_state.git?ref=v2.0.0"

  prefix = "${var.prefix}"
  environment = "${var.environment}"
}

module "vpc" {
  source        =  "github.com/richardx14/tf_vpc_only.git?ref=v0.0.1"
  name          = "web"
  cidr          = "10.0.0.0/16"
  public_subnet = "10.0.1.0/24"
}

resource "consul_key_prefix" "web" {
  token = "${var.token}"

  path_prefix = "web/config/"

  subkeys = {
    "public_dns" = "${aws_elb.web.dns_name}"
  }
}

data "template_file" "index" {
  count = "${length(var.instance_ips)}"
  template = "${file("files/index.html.tpl")}"

  vars {
    hostname = "web-${format("%03d", count.index + 1)}"
  }
}


resource "aws_instance" "web" {
  ami                         = "${lookup(var.ami, var.region)}"
  instance_type               = "${var.instance_type}"
  key_name                    = "${var.key_name}"
  subnet_id                   = "${module.vpc.public_subnet_id}"
  private_ip                  = "${var.instance_ips[count.index]}"
  # user_data                   = "${file("files/web_bootstrap.sh")}"
  associate_public_ip_address = true

  vpc_security_group_ids = [
    "${aws_security_group.web_host_sg.id}",
  ]

#  count = "${var.environment == "production" ? 4 : 2}"
  count = "${length(var.instance_ips)}"

  connection {
    user = "ubuntu"

    private_key = "${file(var.key_path)}"
    }

  provisioner "file" {
    content     = "${element(data.template_file.index.*.rendered, count.index)}"
    destination = "/tmp/index.html"
  }

  provisioner "remote-exec" {
    script = "files/bootstrap_puppet.sh"
  }

  provisioner "remote-exec" {
    inline = [
      #"sudo mv /tmp/index.html /var/www/html/index.html"
      "sudo mv /tmp/index.html /usr/share/nginx/html/index.html"
    ]
  }

}

resource "aws_elb" "web" {
  name = "web-elb"

  subnets         = ["${module.vpc.public_subnet_id}"]
  security_groups = ["${aws_security_group.web_inbound_sg.id}"]

  listener {
    instance_port     = 80
    instance_protocol = "http"
    lb_port           = 80
    lb_protocol       = "http"
  }

  # The instances are registered automatically
  instances = ["${aws_instance.web.*.id}"]
}

resource "aws_security_group" "web_inbound_sg" {
  name        = "web_inbound"
  description = "Allow HTTP from Anywhere"
  vpc_id      = "${module.vpc.vpc_id}"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8
    to_port     = 0
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "web_host_sg" {
  name        = "web_host"
  description = "Allow SSH & HTTP to web hosts"
  vpc_id      = "${module.vpc.vpc_id}"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # HTTP access from the VPC
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["${module.vpc.cidr}"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8
    to_port     = 0
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
